# make_cmake

./: CMakeLists.txt  Makefile.in  Makefile.unix  README  main.c  mydynlib.cpp  mydynlib.h  mystatlib.c  mystatlib.h  prog1.c  prog2.c  prog3.c
stuff/include/: stuff.h
stuff/lib/: libstuff.a.linux32  libstuff.a.linux64  libstuff.a.osx  libstuff.a.osx32  libstuff.a.win32  libstuff.a.win64  stuff.c
